Fixed NavBar on Mobile

--- a/css/main.less
+++ b/css/main.less
@@ -14,9 +14,6 @@ body {
     color: black;
     border-radius: 3px;
     box-shadow: 0 3px 8px 2px rgba(0, 0, 0, 0.09);
-    .a {
-        transition: 0.2s ease;
-    }
 }
 
 .navBar {
@@ -24,7 +21,6 @@ body {
     position: fixed;
     display: block;
     line-height: 70px;
-    height: 70px;
     top: 0;
     width: 100%;
     box-shadow: 0 3px 8px 2px rgba(0, 0, 0, 0.15);
